fix some layout issues

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -9,3 +9,7 @@
 .ios-tappable {
   cursor: pointer;
 }
+
+.full-width {
+  width: 100%;
+}
